# plansys2-gpsr-los-ultramarines-2-0

./: CMakeLists.txt  README.md  instrucciones.txt  package.xml
.github/workflows/: test.yaml
bt_xml/: CloseDoor.xml  DropItem.xml  OpenDoor.xml  PickItem.xml  move copy.xml  move.xml
config/: params.yaml  waypoints.yaml
include/bt_include/: CloseDoor.hpp  DropItem.hpp  OpenDoor.hpp  PickItem.hpp  move.hpp
launch/: gpsr_launch.py
pddl/: grandma_medicine_problem.pddl  planning_domain copy.pddl  planning_domain.pddl  planning_domain_durative.pddl  problema.pddl
src/: gpsr_controller.cpp  gpsr_controller2.cpp  move_action_node.cpp
src/nodes/: CloseDoor.cpp  CloseDoora.cpp  DropItem.cpp  OpenDoor.cpp  PickItem.cpp  move copy.cpp  move.cpp
